Updated getAllBrands and getAllTags
Will need to run the job class sometime afterwards though. There's currently nothing in the tags nor brands tables.